--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <link rel="stylesheet" href="./js/script.js" />
   </head>
   <body>
-    <h1>TEAM_A_PROJECT</h1>
+    <h1><a href="index.html">TEAM_A_PROJECT</a></h1>
+    <nav>
+      <li><a href="index.html"></a></li>
+      <li><a href="about.html"></a></li>
+      <li><a href="Notice.html"></a></li>
+    </nav>
   </body>
 </html>
